projects/addon-doc/components/documentation/documentation.style.less
@import '@taiga-ui/core/styles/taiga-ui-local';

@color-property: #8f75d1;

:host {
    display: block;
    min-inline-size: 100%;
}

.t-table {
    inline-size: 100%;
    table-layout: fixed;
}

.t-row {
    &:not(:last-child) {
        border-block-end: 1px solid var(--tui-border-normal);
    }

    @media @tui-mobile {
        display: flex;
        flex-wrap: wrap;

        &_header {
            display: none;
        }
    }
}

.t-cell {
    padding: 1rem 1rem 0.875rem;

    &:first-child {
        padding-left: 0;
    }

    &:last-child {
        padding-right: 0;
    }

    &_prop {
        inline-size: 40%;
    }

    &_value {
        text-align: end;
    }

    @media @tui-mobile {
        inline-size: 100%;
        block-size: auto;
        padding: 0.5rem 0;
        text-align: start;
    }
}

.t-th {
    padding: 0.5rem 1rem;
    color: var(--tui-text-secondary);
    font-weight: normal;
    text-align: start;

    &_value {
        max-inline-size: 20rem;
        text-align: end;

        @media @tui-mobile {
            inline-size: 9.375rem;
        }
    }
}

.t-property {
    font: var(--tui-font-text-m);
    margin-bottom: 0.25rem;
    font-family: monospace;
    color: @color-property;

    @media @tui-mobile {
        padding: 0.5rem 0;
    }
}

.t-type {
    font-family: monospace;
}

.t-deprecated {
    .t-property-code {
        text-decoration: line-through;
    }
}

.t-deprecated-label {
    margin-right: 0.125rem;
    color: var(--tui-text-negative);
    font-size: 0.75rem;
}

.t-additional-info {
    display: flex;
    gap: 0.3125rem;
    align-items: center;
}

.t-exception {
    display: block;
    inline-size: max-content;
}

.t-output {
    text-align: start;
    opacity: 0;
}

.t-heading {
    font: var(--tui-font-heading-4);
}

.t-code-type {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-start;
}

.t-code-reference {
    display: inline-flex;
    color: var(--tui-text-action);
    text-decoration: none;
    align-items: center;
    justify-content: center;
    gap: 3px;

    &::after {
        content: '';
        font-size: 1rem;
        inline-size: 1rem;
        block-size: 1rem;
        background: currentColor;
        // TODO: migrate to <tui-icon /> in v4.0
        mask: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>')
            center/100%;
    }
}

.t-switch {
    display: block;

    @media not @tui-mobile {
        margin-left: auto;
    }
}

.t-data-list {
    overflow-wrap: anywhere;

    @media not @tui-mobile {
        max-inline-size: 22.5rem;
    }
}

